# Hackathon-Physical-AI-Humanoid-Robotics

./: .env.example  .gitignore  CLAUDE.md  README.md  add_test_data.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test_basic_functionality.py  test_doc.html  test_search.py
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  README.md  main.py  main_fixed.py  pyproject.toml  requirements.txt  server_only.py  start_server.bat  start_server.sh
backend/docs/: api_documentation.md
backend/scripts/: validate_connection.py  validate_retrieval.py
backend/src/config/: settings.py
backend/src/rag_validation/: __init__.py  api.py  cohere_embedder.py  entities.py  qdrant_client.py  query_validator.py  result_evaluator.py  test_queries.py
backend/tests/: conftest.py
backend/tests/integration/: test_connection.py  test_metadata.py  test_retrieval_pipeline.py  test_stability.py
backend/tests/unit/: test_cohere_embedder.py  test_connection_acceptance.py  test_metadata_acceptance.py  test_qdrant_client.py  test_query_validator.py  test_result_evaluator.py  test_semantic_search_acceptance.py
history/adr/: 001-api-communication-strategy.md  002-frontend-component-architecture.md  003-text-selection-context-handling.md  004-error-handling-user-experience-strategy.md
my-website/: docusaurus.config.js  package-lock.json  sidebars.js
specs/1-book-qna-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-docusaurus-rag-indexing/: data-model.md  (+5 more)
src/: __init__.py
(+152 files in other folders)
