[project]
name = "docusaurus-rag-indexing"
version = "0.1.0"
description = "RAG indexing system for Docusaurus book content"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cohere>=4.0",
    "qdrant-client>=1.7",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]